<?xml version="1.0" encoding="utf-8"?>

<!--
 * Created by 
 * FrogoBox Inc License
 * =========================================
 * 
 * Copyright (C) .      
 * All rights reserved
 * 
 * Name     : Muhammad Faisal Amir
 * E-mail   : faisalamircs@gmail.com
 * Line     : bullbee117
 * Phone    : 081357108568
 * Majors   : D3 Teknik Informatika 2016
 * Campus   : Telkom University
 * 
 * id.amirisback.frogobox
 * 
 -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="presenter"
            type="org.d3ifcool.finpro.core.presenters.AuthPresenter"
            />
    </data>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundWhite">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>


        </LinearLayout>

        <ImageView
            android:layout_centerHorizontal="true"
            android:id="@+id/ic_logo"
            android:layout_marginTop="@dimen/dimen_large_64dp"
            android:layout_width="@dimen/dimen_profil_photo"
            android:layout_height="@dimen/dimen_profil_photo"
            android:src="@drawable/ic_logo_apps" />

        <LinearLayout
            android:elevation="@dimen/dimen_small_4dp"
            android:layout_below="@id/ic_logo"
            android:layout_above="@id/prodi"
            android:id="@+id/contentPanel"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_big_ultra_32dp"
            android:layout_marginBottom="@dimen/dimen_big_super_24dp"
            android:layout_marginStart="@dimen/dimen_big_super_24dp"
            android:layout_marginEnd="@dimen/dimen_big_super_24dp"
            android:layout_width="match_parent"
            android:padding="@dimen/dimen_big_16dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundWhite">

            <EditText
                android:id="@+id/act_main_edittext_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_medium_8dp"
                android:hint="@string/hint_id_pengguna"
                android:maxLines="1"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:singleLine="true"
                android:textColor="@color/colorTextBlack"
                android:text="@={presenter.username}"/>


            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/act_main_edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_big_16dp"
                    android:hint="@string/hint_kata_sandi"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/button_click_masuk"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingTop="@dimen/dimen_medium_8dp"
                    android:paddingBottom="@dimen/dimen_medium_8dp"
                    android:singleLine="true"
                    android:text="@={presenter.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/act_main_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/button_click_masuk"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="@{() -> presenter.doLogin()}"
                android:textColor="@color/colorTextWhite" />

            <TextView
                android:layout_margin="@dimen/dimen_big_16dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small_10sp"
                android:text="@string/app_name_long"/>


        </LinearLayout>

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/prodi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_10sp"
            android:text="@string/text_prodi"
            android:layout_above="@id/text_telkom"/>

        <TextView
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_big_16dp"
            android:textSize="@dimen/text_size_small_10sp"
            android:id="@+id/text_telkom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_telkomuniversity"/>

    </RelativeLayout>
</layout>