...
    <string name="title_setuju">Setuju</string>
    <string name="title_pengajuan_judulpa">Pengajuan Judul PA</string>
    <string name="title_informasi_detail">Detail Informasi</string>
    <string name="title_informasi_tambah">Tambah Informasi</string>
    <string name="title_bimbingan_detail">Detail Bimbingan</string>
    <string name="title_monev_detail">Detail Monev</string>
    <string name="title_keluar">Keluar</string>
    <string name="title_list_bimbingan">Bimbingan</string>
    <string name="title_list_monev">Monev</string>
    <string name="title_mahasiswa_detail">Detail Mahasiswa</string>
    <string name="title_pemetaan_detail">Detail Pemetaan Monev</string>
    <string name="title_bimbingan_tambah">Bimbingan Mahasiswa</string>
    <string name="title_monev_tambah">Monev Mahasiswa</string>
...
