<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="presenter"
            type="org.d3ifcool.finpro.core.presenters.InformasiPresenter" />

        <variable
            name="token"
            type="String" />

    </data>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        app:onRefreshListener="@{()->presenter.getAllInformasi(token)}">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Empty View -->
            <include
                android:id="@+id/include_layout"
                layout="@layout/content_list_all_is_empty"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_medium_8dp"
                tools:listitem="@layout/content_list_all_informasi"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/frg_koor_dosen_home_fab"
                style="@style/fab_all_add"
                android:onClick="@{()->presenter.floatClick()}"/>


        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>