...
                    android:hint="@string/hint_kontak_dosen"/>

            </LinearLayout>

            <Button
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/act_koor_dosen_button_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_tambah_dosen"
                android:textColor="@color/colorTextWhite"
                android:layout_marginTop="@dimen/dimen_big_ultra_32dp"
                android:onClick="@{()->presenter.onCreate()}"
...
